--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,3 +61,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+
+module:
+  androidX: true
